= Version descriptions

== master

- Resolves: gh#441 cron can now again update inactive relations once a month

- Resolves: gh#437 the locale install requirement is now documented

- Resolves: gh#436 ref street name is now shown after the osm street name if it differs

- Resolves: gh#381 stats now has trendlines

- Resolves: gh#426 missing housenumbers now allows updating from OSM with a single click

- Resolves: gh#383 stats, monthly total now has an extra column to show today's count

- Resolves: gh#385 `invalid` list items are now normalized by default

- Resolves: gh#388 cron's console output and log file now uses the same format

- Resolves: gh#414 the missing housenumber page's table is now sorted correctly even if house number
  ranges reduce the amount of items for some streets

- Resolves: gh#372 commercial house numbers now can have comments, visible as tooltips

== 5.0

- A new `/osm/housenumber-stats/hungary/` page featuring new and all-time house number data

- A new `cherry.py` glue layer to help running on top of CherryPy

- <https://github.com/vmiklos/osm-gimmisn/issues/380> the validator now catches strings which are
  not valid items in an `invalid:` string list

- <https://github.com/vmiklos/osm-gimmisn/issues/363> next to letter suffixes (42/a), now digit
  suffixes are also accepted (42/1). Both are still limited to a single-char suffix (2020-03-23)

== 4.0

- <https://github.com/vmiklos/osm-gimmisn/issues/344> next to the existing "txt" output, a new
  "chkl" output is available for missing house numbers of a relation, providing a plain text
  checklist. (2020-03-07)

- yaml files are now parsed build-time to improve performance (main page loads 7 times faster)

- complete line coverage for the cron code, which was the last uncovered module

== 3.0

- complete test coverage for the wsgi code

== 2.0

- <https://github.com/vmiklos/osm-gimmisn/issues/322> alias names are now supported for relations,